# ControlDeAsistencia

./: Diapositivas.txt  README.md  youtube.txt
Proyecto/: CMakeLists.txt  converter.h  estilos.css  image_matrix.h  index.html  label.h  main.cpp  pixel.h  program.h  queue_label.h  seam_carving.h
